2008-10-12  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (main): Ignore -psn_* on quartz, which is added
	by Finder.
	
	* src/dh-util.c: (util_get_mac_data_dir): Point to the Resources
	directory inside the bundle.

	* src/dh-window.c: (window_populate): Use
	dh_util_build_data_filename.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/dh-util.c: (dh_util_build_data_filename): Pick up bundle
	location if executed from a bundle (still needs work to point to
	the right place).

2008-10-11  Richard Hult  <richard@imendio.com>

	* autogen.sh: Replace with our own to get more control over what
	it does.

	* src/Makefile.am: Enable single includes for the dependencies.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/dh-assistant-view.[ch]: Make consistant with the rest of the
	code: Move the instance/class structs to the header file and move
	private data to a private struct.

2008-10-11  Richard Hult  <richard@imendio.com>

	* build/Makefile.am.gi18n-check:
	* src/Makefile.am: Add check for gi18n vs gi18n-lib, based on
	patch from Sven Herzberg.

2008-10-11  Richard Hult  <richard@imendio.com>

	* data/Makefile.am:
	* src/Makefile.am: Small distcheck fixes.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_init): Add missing NULL terminator.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/ige-conf-gconf.c: (ige_conf_init), (ige_conf_add_defaults):
	* src/ige-conf-private.h:
	* src/ige-conf.c: (_ige_conf_defaults_free_list): Fix build with
	gconf implementation.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/ige-conf-mac.c: Rename from .m to work around a bug(?) in
	auto*, can't get this to work on linux.

	* configure.ac: Remove AC_PROG_OBJC.

	* src/Makefile.am: Update the filename here and use -xobjective-c.

2008-10-10  Richard Hult  <richard@imendio.com>

	* autogen.sh:
	* configure.ac: Rename configure.in to .ac.

2008-10-10  Richard Hult  <richard@imendio.com>
